[package]
name = "rust-streak"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

chrono = "0.4.42"
